Ensure that scroll bar on browser tree should be visible on windows resize #5402

--- a/web/pgadmin/static/scss/_pgadmin4-tree.overrides.scss
+++ b/web/pgadmin/static/scss/_pgadmin4-tree.overrides.scss
@@ -10,6 +10,10 @@
 	width: 100%;
 }
 
+.browser-tree {
+  height: 100%;
+}
+
 .file-tree > {
 	div {
     position: absolute !important;
